<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Arduino</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="imageContentDescription">Controllo dettatura</string>
    <string name="seekbar_label">Move to control the position:</string>
    <string name="analog_label">Analog readingNO WAY !!:</string>
    <string name="tiltadjusterLabel">Tilt adjuster Value: </string>
    <string name="tiltCorrectionLabel">Tilt Adjuster Value: </string>
    <string name="kPadjusterLabel">kP adjuster Value:</string>
    <string name="kIadjusterLabel">kI adjuster Value:</string>
    <string name="kDadjusterLabel">kD adjuster Value:</string>
    <string name="currentAngleLabel">Current Angle Value:</string>
    <string name="multiplierAdjusterLabel">Speed Multiplier</string>

</resources>
